# switchboard

./: .buildinfo  .clang-format  .flake8  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  Rules.mk  SECURITY.md  genindex.html  ibex_simple_system.core  ibex_simple_system_core.core  ibex_simple_system_main.cc  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.py  switchboard.bitvector.html  switchboard.html  switchboard.icarus.html  switchboard.loopback.html  switchboard.sbdut.html  switchboard.sbtcp.html  switchboard.uart_xactor.html  switchboard.umi.html  switchboard.util.html  switchboard.verilator.html  testbench.core  verible_lint.txt
.doctrees/: environment.pickle  index.doctree  switchboard.bitvector.doctree  switchboard.doctree  switchboard.icarus.doctree  switchboard.loopback.doctree  switchboard.sbdut.doctree  switchboard.sbtcp.doctree  switchboard.uart_xactor.doctree  switchboard.umi.doctree  switchboard.util.doctree  switchboard.verilator.doctree
_modules/: index.html
_sources/: index.rst.txt  switchboard.icarus.rst.txt  switchboard.rst.txt  switchboard.sbdut.rst.txt  switchboard.uart_xactor.rst.txt  switchboard.util.rst.txt  switchboard.verilator.rst.txt
_static/: documentation_options.js
cpp/: .gitignore  Makefile  pagemap.h  pciedev.h  phiber.hpp  router.cc  spsc_queue.h  switchboard.hpp  switchboard_pcie.hpp  switchboard_tlm.hpp  umidriver.cc  umilib.hpp  umisb.hpp  umiverse.hpp
docs/: index.rst
dpi/: phiber_dpi.cc  switchboard_dpi.cc  umiverse_dpi.cc
examples/: README.md  clean.sh  dependencies.json  get_deps.py  get_deps.sh  pytest.ini  requirements.txt  test_bit_vector.py  test_examples.py
firmware/: Makefile  common.h  device.h  exit_plugin.c  firmware.c  firmware.ld  firmware.s  makehex.py  test_plugin.c  uart_plugin.c
interposer/: picorv32.py
models/: Makefile  router.cc
picorv32/: picorv32.core  picorv32.v
python/: Makefile  switchboard_pybind.cc
random/: mkqueues.py
sim/: axi4_memory.v  picorv32_wrapper.v  testbench.cc
switchboard/: __init__.py  ams.py  apb.py  autowrap.py  axi.py  axil.py  bit_util.py  bitvector.py  cmdline.py  gpio.py  icarus.py  loopback.py  network.py  old2new.py  pytest_plugin.py  sb-tcp.py  sbdesign.py  sbdut.py  sbdut_old.py  sbtcp.py  switchboard.py  test_util.py  txrx.py  uart_xactor.py  umi.py  umi_ram.py  util.py  verilator.py  verilator_run.py  warn.py  xyce.py
tests/: .gitignore  Makefile  (+6 more)
(+463 files in other folders)
