[build-system]
requires = [
    "scikit-build-core >= 0.12",
    "setuptools_scm[toml] >= 8",
    "pybind11 >= 2.6, < 4"
]
build-backend = "scikit_build_core.build"

[tool.setuptools_scm]
# Presence of this section activates setuptools_scm

[project]
name = "switchboard-hw"
description = "A low-latency communication library for RTL simulation and emulation."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Zero ASIC", email = "support@zeroasic.com" }
]
dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "tqdm",
    "siliconcompiler >= 0.35.3, < 0.38.0"
]

[project.urls]
Documentation = "https://zeroasiccorp.github.io/switchboard/"
"Source Code" = "https://github.com/zeroasiccorp/switchboard"
"Bug Tracker" = "https://github.com/zeroasiccorp/switchboard/issues"

[project.optional-dependencies]
test = [
    "pytest >= 8, < 10",
    "pytest-xdist",
    "pytest-timeout"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "autodocsumm"
]

[project.scripts]
sbtcp = "switchboard.sbtcp:main"
switchboard = "switchboard.switchboard:main"

[project.entry-points.pytest11]
switchboard = "switchboard.pytest_plugin"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
wheel.packages = ["switchboard"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
editable.mode = "redirect"
editable.rebuild = false

[[tool.scikit-build.generate]]
path = "switchboard/_version.py"
template = '''
# This file is automatically generated by scikit-build-core.
# Do not edit it directly.

__version__ = "${version}"
'''

[tool.pytest.ini_options]
testpaths = ["examples"]
norecursedirs = ["examples/deps"]
